// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/time-picker/demo/12hours.md correctly 1`] = `
<div>
  <span
    class="ant-time-picker"
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </i>
    </span>
  </span>
  <span
    class="ant-time-picker"
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </i>
    </span>
  </span>
  <span
    class="ant-time-picker"
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </i>
    </span>
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/addon.md correctly 1`] = `
<span
  class="ant-time-picker"
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/basic.md correctly 1`] = `
<span
  class="ant-time-picker"
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/disabled.md correctly 1`] = `
<span
  class="ant-time-picker"
>
  <input
    class="ant-time-picker-input"
    disabled=""
    id=""
    placeholder="Select time"
    type="text"
    value="12:08:23"
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/hide-column.md correctly 1`] = `
<span
  class="ant-time-picker"
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value="12:08"
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
        />
      </svg>
    </i>
  </span>
  <i
    aria-label="icon: close-circle"
    class="anticon anticon-close-circle ant-time-picker-clear"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class=""
      data-icon="close-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
      />
    </svg>
  </i>
</span>
`;

exports[`renders ./components/time-picker/demo/interval-options.md correctly 1`] = `
<span
  class="ant-time-picker"
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/size.md correctly 1`] = `
<div>
  <span
    class="ant-time-picker ant-time-picker-large"
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </i>
    </span>
    <i
      aria-label="icon: close-circle"
      class="anticon anticon-close-circle ant-time-picker-clear"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </i>
  </span>
  <span
    class="ant-time-picker"
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </i>
    </span>
    <i
      aria-label="icon: close-circle"
      class="anticon anticon-close-circle ant-time-picker-clear"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </i>
  </span>
  <span
    class="ant-time-picker ant-time-picker-small"
  >
    <input
      class="ant-time-picker-input"
      id=""
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="ant-time-picker-icon"
    >
      <i
        aria-label="icon: clock-circle"
        class="anticon anticon-clock-circle ant-time-picker-clock-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </i>
    </span>
    <i
      aria-label="icon: close-circle"
      class="anticon anticon-close-circle ant-time-picker-clear"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
        />
      </svg>
    </i>
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/suffix.md correctly 1`] = `
<span
  class="ant-time-picker"
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: smile"
      class="anticon anticon-smile ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm352 0a48 48 0 1 0 96 0 48 48 0 1 0-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 0 1 248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 0 1 249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 0 1 775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 0 1 775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 0 0-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 0 0-8-8.4z"
        />
      </svg>
    </i>
  </span>
</span>
`;

exports[`renders ./components/time-picker/demo/value.md correctly 1`] = `
<span
  class="ant-time-picker"
>
  <input
    class="ant-time-picker-input"
    id=""
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="ant-time-picker-icon"
  >
    <i
      aria-label="icon: clock-circle"
      class="anticon anticon-clock-circle ant-time-picker-clock-icon"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="clock-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
        <path
          d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
        />
      </svg>
    </i>
  </span>
</span>
`;
